# DRG-fuse

./: .gitignore  DATA.md  README.md  REPRODUCIBILITY.md  environment.yml  pyproject.toml  requirements.txt
assets/tables/: table1.md  table1.tex  table2.md  table2.tex  table3.md  table3.tex
assets/tables/supplementary/: calibration_ct.md  calibration_fusion.md  calibration_wsi.md
checkpoints/: README.md  toy_model.pt
configs/: template.yaml  toy.yaml
data/example/: metadata.csv
data/example/features/: S0001.npz  S0002.npz  S0003.npz  S0004.npz  S0005.npz  S0006.npz  S0007.npz  S0008.npz  S0009.npz  S0010.npz  S0011.npz  S0012.npz  S0013.npz  S0014.npz  S0015.npz  S0016.npz  S0017.npz  S0018.npz  S0019.npz  S0020.npz  S0021.npz  S0022.npz  S0023.npz  S0024.npz  S0025.npz  S0026.npz  S0027.npz  S0028.npz  S0029.npz  S0030.npz  S0031.npz  S0032.npz  S0033.npz  S0034.npz  S0035.npz  S0036.npz  S0037.npz  S0038.npz  S0039.npz  S0040.npz  (+60 more)
scripts/: eval.py  infer.py  make_toy_data.py  plot_routing_analysis.py  prepare_ct_features_template.py  prepare_wsi_features_template.py  sanitize_scan.py  train.py
src/drgfuse/: data.py  losses.py  metrics.py  utils.py
src/drgfuse/models/: __init__.py  fusion.py
